Refactor: cleanup translation

--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -15,6 +15,6 @@ html
     footer.page-footer
       .container
         hr
-        p= t("app.global.footer.made_by")
+        p= t("app.made_by")
           |  <a href="https://twitter.com/YouKnowUU" title="#{twitter_account}" class="external-link")>@YouKnowUU</a>.
     block js
