--- a/views/templates/event/layout.jade
+++ b/views/templates/event/layout.jade
@@ -11,7 +11,7 @@
         .col-md-12.col-sm-3.col-xs-6
           button.btn.btn-action.btn-block(type="button" ng-click="model.addParticipant()")
             span.glyphicon.glyphicon-plus-sign
-            |  #{t("app.event.actions.add_participant")}
+            |  #{t("app.event.add_p")}
     .event-layout-content.col-md-10.col-xs-12
       nav
         ul.nav.nav-tabs.nav-tabs-content
