--- a/views/templates/event/includes/expenses_list_panel.jade
+++ b/views/templates/event/includes/expenses_list_panel.jade
@@ -9,18 +9,18 @@
           li
             a(href="javascript:void(0)" ng-click="listModel.deleteExpense(expense)")
               span.glyphicon.glyphicon-trash(aria-hidden="true")
-              |  #{t("app.event.delete")}
+              |  #{t("app.expenses.delete.label")}
       h4
         span.text-bold {{::expense.amount | currency}}
         | &nbsp;- {{::expense.label}}
     .panel-body
-      p #{t("app.event.purchased_by")}&nbsp;
+      p #{t("app.expenses.by")}&nbsp;
         span.text-bold(ng-bind="::expense.purchaserName")
-      p #{t("app.event.shared_between")}&nbsp;
+      p #{t("app.expenses.shared")}&nbsp;
         span.text-bold(debts-inline-data="::expense.participantsNames")
     .panel-footer(ng-if="::expense.description" ng-bind="::expense.description")
   loading-spinner(ng-show="listModel.loading")
   .row.text-center(ng-hide="listModel.loading")
     button.btn.btn-load-more(ng-click="listModel.loadMore()" ng-disabled="listModel.allLoaded")
       span.glyphicon.glyphicon-triangle-bottom(aria-hidden="true")
-      |  #{t("app.event.load_more")}
+      |  #{t("app.expenses.load_more")}
