--- a/src/less/style.less
+++ b/src/less/style.less
@@ -60,6 +60,7 @@
 @import "includes/ng-strap";
 @import "includes/main";
 @import "includes/participant";
+@import "includes/activity";
 @import "includes/notification";
 @import "includes/element";
 @import "includes/nav-tabs";
