New design for expenses

--- a/src/less/includes/panel.less
+++ b/src/less/includes/panel.less
@@ -11,14 +11,8 @@
 }
 
 .debts-panel-heading {
+  .divider-after(@margin: 0.8em; @width: 1px; @color: @main-brand-color);
   padding: 1em 1em 0;
-
-  &:after {
-    content: "";
-    display: block;
-    margin: 0.8em 0 0;
-    border-bottom: 1px solid @main-brand-color;
-  }
 }
 
 .debts-panel-title {
