--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -12,7 +12,7 @@ html
   body(ng-app="app")
     header
     block content
-    footer.page-footer
+    footer#page-footer.page-footer
       .container
         hr
         p= t("app.made_by")
