--- a/views/templates/event/includes/expenses_list_panel.jade
+++ b/views/templates/event/includes/expenses_list_panel.jade
@@ -1,25 +1,24 @@
-.expenses-list-panel(ng-controller="ExpensesListController as listModel")
-  .panel.panel-primary(ng-cloak="" ng-repeat="expense in listModel.expenses | orderBy:$index:true")
-    .panel-heading
-      .floating-options.dropdown
-        button#expenseMenu.btn.btn-options.btn-icon.dropdown-toggle(type="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="true")
-          i.fa.fa-ellipsis-v
-        ul.dropdown-menu.dropdown-menu-right(aria-labelledby="expenseMenu")
-          li
-            a(href="javascript:void(0)" ng-click="listModel.deleteExpense(expense)")
+- var deleteExpenseTranslation = t("app.expenses.delete.label");
+
+.row
+  section#expenses-list(ng-controller="ExpensesListController as listModel")
+    div(masonry="" preserve-order="" load-images="false" masonry-options="{transitionDuration: 0}")
+      .expense.masonry-brick(ng-repeat="expense in listModel.expenses | orderBy:$index:true" prepend="$first")
+        .expense-box
+          .expense-label
+            h5 {{::expense.label}} <small>({{::expense.purchaserName}})</small>
+          .expense-amount
+            span(ng-bind="::expense.amount | currency")
+          .expense-participants
+            i.fa.fa-exchange
+            div(debts-inline-data="::expense.participantsNames")
+          .expense-description(ng-if="::expense.description")
+            p(ng-bind="::expense.description")
+          .expense-actions
+            a(href="javascript:void(0)" ng-click="listModel.deleteExpense(expense)" title=deleteExpenseTranslation)
               i.fa.fa-trash-o
-              |  #{t("app.expenses.delete.label")}
-      h4
-        span.text-bold {{::expense.amount | currency}}
-        | &nbsp;- {{::expense.label}}
-    .panel-body
-      p #{t("app.expenses.by")}&nbsp;
-        span.text-bold(ng-bind="::expense.purchaserName")
-      p #{t("app.expenses.shared")}&nbsp;
-        span.text-bold(debts-inline-data="::expense.participantsNames")
-    .panel-footer(ng-if="::expense.description" ng-bind="::expense.description")
-  .row.text-center
-    button.btn.btn-load-more.btn-sm(type="button" ng-click="listModel.loadMore()" ng-disabled="listModel.allLoaded")
-      i.fa.fa-arrow-circle-o-down
-      = t("app.expenses.load_more")
+              = deleteExpenseTranslation
+    .row.text-center(ng-hide="listModel.loading")
+      button.btn.btn-load-more.btn-sm(type="button" ng-click="listModel.loadMore()" ng-disabled="listModel.allLoaded")
+        i.fa.fa-arrow-circle-o-down
+        = t("app.expenses.load_more")
