--- a/src/less/style.less
+++ b/src/less/style.less
@@ -54,11 +54,13 @@
 //@import "@{angular-motion-src-directory}/slide/slide";
 
 @import "includes/variables";
+@import "mixins/mixins";
 @import "includes/angular";
 @import "includes/ng-strap";
 @import "includes/panel";
 @import "includes/main";
 @import "includes/history";
+@import "includes/expense";
 @import "includes/participant";
 @import "includes/activity";
 @import "includes/notification";
