--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -51,6 +51,10 @@ a {
   font-weight: bold;
 }
 
+.margin-btm-1 {
+  margin-bottom: 1em;
+}
+
 .debts-panel {
   background-color: @panel-bg;
   border: 1px solid @main-brand-color;
