Hide history on small screens

--- a/views/templates/event/layout.jade
+++ b/views/templates/event/layout.jade
@@ -12,8 +12,8 @@
           button.btn.btn-action.btn-block.margin-btm-1(type="button" ng-click="model.addParticipant()")
             span.glyphicon.glyphicon-plus-sign
             |  #{t("app.event.add_p")}
-      .row
-        .col-xs-12
+      .row.hidden-sm.hidden-xs
+        .col-md-12
           include includes/history
     .event-layout-content.col-md-10.col-xs-12
       nav
