--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -55,6 +55,10 @@ a {
   margin-bottom: 1em;
 }
 
+span[ng-click] {
+  cursor: pointer;
+}
+
 .debts-panel {
   background-color: @panel-bg;
   border: 1px solid @main-brand-color;
