--- a/src/less/style.less
+++ b/src/less/style.less
@@ -37,7 +37,7 @@
 //@import "@{bootstrap-less-directory}/wells";
 @import "@{bootstrap-less-directory}/close";
 @import "@{bootstrap-less-directory}/modals";
-//@import "@{bootstrap-less-directory}/tooltip";
+@import "@{bootstrap-less-directory}/tooltip";
 //@import "@{bootstrap-less-directory}/popovers";
 //@import "@{bootstrap-less-directory}/carousel";
 @import "@{bootstrap-less-directory}/utilities";
