--- a/src/less/includes/nav-tabs.less
+++ b/src/less/includes/nav-tabs.less
@@ -1,72 +1,37 @@
 .event-layout-content {
-  .nav-tabs {
-    border-color: #ccc;
-  }
-
   .nav-tabs-content {
     margin-bottom: 2em;
 
-    > li {
-      padding: 0;
-      margin: 0 0.8em -1px;
+    > li > a {
+      color: lighten(@text-color, 10%);
+      margin-right: 0;
+      border: solid transparent;
+      border-width: 3px 1px 1px;
 
-      &:first-child {
-        margin-left: 0;
+      .tab-icon {
+        color: #bbb;
       }
+    }
 
-      > a {
-        background: none;
-        border: none;
-        border-bottom: 1px solid transparent;
-        border-radius: 0;
-        cursor: pointer;
-        text-align: center;
+    > li > a:hover,
+    > li > a:focus {
+      background: none;
+      border-color: transparent;
+      color: @text-color;
+    }
+
+    > li.active > a,
+    > li.active > a:focus,
+    > li.active > a:hover {
+      color: @text-color;
+      background-color: #f5f5f5;
+      border: solid @nav-tabs-border-color;
+      border-width: 3px 1px 1px;
+      border-top-color: @third-brand-color;
+      border-bottom-color: transparent;
+
+      .tab-icon {
         color: @text-color;
-        padding: 0;
-        margin: 0;
-        font-size: 1.6em;
-        line-height: 2em;
-        display: inline-block;
-        vertical-align: bottom;
-
-        @media (max-width: @screen-xs-max) {
-          font-size: 1.2em;
-        }
-      }
-
-      &,
-      &.active {
-        > a {
-          &,
-          &:hover,
-          &:focus {
-            border: none;
-            background: none;
-            border-bottom: 1px solid transparent;
-            -moz-transition: 0.15s ease-in-out;
-            -webkit-transition: 0.15s ease-in-out;
-            -o-transition: 0.15s ease-in-out;
-            -ms-transition: 0.15s ease-in-out;
-            transition: 0.15s ease-in-out;
-          }
-        }
-      }
-
-      &.active > a {
-        &,
-        &:hover,
-        &:focus {
-          color: @third-brand-color;
-          border-color: @third-brand-color;
-        }
-      }
-
-      > a {
-        &:hover,
-        &:focus {
-          color: #ccc;
-          border-color: #ccc;
-        }
       }
     }
   }
