--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -6,6 +6,8 @@
 @fourth-brand-color: #1b435d;
 @inverse-brand-color: #fff;
 
+@font-family-base: 'PT Sans', Helvetica, sans-serif;
+@body-bg: #f5f5f5;
 @text-color: #5c5c5c;
 @border-color: #ddd;
 
